--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,5 @@ jobs:
         run: npm ci
       - name: run unit tests
         run: npm run test
+      - name: run e2e tests
+        run: npm run test:e2e
