--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,4 @@ jobs:
       - name: install dependencies
         run: npm ci
       - name: run unit tests
-        run: npm run test
-      - name: run e2e tests
-        run: npm run test:e2e
+        run: npm run test && npm run test:e2e
